[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/EnemyRanged.gd" type="Script" id=1]
[ext_resource path="res://Enemies/EnemyHitBox.gd" type="Script" id=2]
[ext_resource path="res://Enemies/blanc.shader" type="Shader" id=3]
[ext_resource path="res://Assets/square.png" type="Texture" id=4]
[ext_resource path="res://Enemies/LifeBar.gd" type="Script" id=5]
[ext_resource path="res://HUD/Images/heart_full.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Heart.gd" type="Script" id=7]
[ext_resource path="res://Sounds/capote.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 160 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 160 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/f = 0.0

[node name="EnemyRanged" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="BoundingBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="LesSprites" type="Node2D" parent="."]
editor/display_folded = true
material = SubResource( 3 )

[node name="DebugSquare" type="Sprite" parent="LesSprites"]
modulate = Color( 0.611765, 0.219608, 0.219608, 1 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="LifeBar" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = -159.43
margin_top = -259.342
margin_right = 40.57
margin_bottom = -59.3417
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )

[node name="Heart" type="TextureRect" parent="LifeBar"]
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="Death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = 1.0
